--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mega-proj",
   "version": "1.0.0",
   "description": "A backend",
+  "type":"module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
