--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mega-proj",
   "version": "1.0.0",
   "description": "A backend",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +12,8 @@
     "backend"
   ],
   "author": "Sharvani p",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.6.2"
+  }
 }
